--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-certifi==2018.4.16
-chardet==3.0.4
-click==6.7
-Flask==1.0.2
-idna==2.7
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-oauthlib==2.1.0
-requests==2.19.1
-requests-oauthlib==1.0.0
-twython==3.7.0
-urllib3==1.23
-Werkzeug==0.14.1
+blinker==1.6.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+Flask==2.3.2
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+requests==2.31.0
+urllib3==2.0.3
+Werkzeug==2.3.6
